@@ -6,16 +6,16 @@
 
 package com.skcraft.launcher.launch;
 
-import lombok.Getter;
-import lombok.Setter;
-import lombok.ToString;
-
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+
+import lombok.Getter;
+import lombok.Setter;
+import lombok.ToString;
 
 /**
  * A tool to build the entire command line used to launch a Java process.
@@ -27,10 +27,9 @@ public class JavaProcessBuilder {
 
     private static final Pattern argsPattern = Pattern.compile("(?:([^\"]\\S*)|\"(.+?)\")\\s*");
 
-    @Getter @Setter private File jvmPath = JavaRuntimeFinder.findBestJavaPath();
+    @Getter @Setter private File jvmPath;
     @Getter @Setter private int minMemory;
     @Getter @Setter private int maxMemory;
-    @Getter @Setter private int permGen;
 
     @Getter private final List<File> classPath = new ArrayList<File>();
     @Getter private final List<String> flags = new ArrayList<String>();
@@ -100,10 +99,6 @@ public class JavaProcessBuilder {
 
         if (maxMemory > 0) {
             command.add("-Xmx" + String.valueOf(maxMemory) + "M");
-        }
-
-        if (permGen > 0) {
-            command.add("-XX:MaxPermSize=" + String.valueOf(permGen) + "M");
         }
 
         command.add("-cp");
